[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/SimulationStarterWindow.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Font.tres" type="DynamicFont" id=2]

[node name="SimulationStarterWindow" type="WindowDialog"]
visible = true
margin_left = 2.0
margin_top = 20.0
margin_right = 692.0
margin_bottom = 596.0
script = ExtResource( 1 )

[node name="ROW_SECTORS" type="SpinBox" parent="."]
margin_left = 20.0
margin_top = 75.0
margin_right = 94.0
margin_bottom = 99.0
min_value = 5.0
max_value = 20.0
value = 5.0

[node name="rows" type="RichTextLabel" parent="ROW_SECTORS"]
margin_left = 10.0
margin_top = -24.0
margin_right = 50.0
margin_bottom = -7.0
text = "ROWS"

[node name="ENEMY_MAX_DEFENDERS" type="SpinBox" parent="."]
margin_left = 75.0
margin_top = 390.0
margin_right = 149.0
margin_bottom = 414.0
min_value = 2.0
max_value = 35.0
value = 5.0

[node name="defenders" type="RichTextLabel" parent="ENEMY_MAX_DEFENDERS"]
margin_left = -53.0
margin_top = -24.0
margin_right = 108.0
margin_bottom = -7.0
text = "MAX ENEMY DEFENDERS"

[node name="ENEMY_MAX_SEEKERS" type="SpinBox" parent="."]
margin_left = 266.0
margin_top = 390.0
margin_right = 340.0
margin_bottom = 414.0
min_value = 2.0
max_value = 35.0
value = 5.0

[node name="seekers" type="RichTextLabel" parent="ENEMY_MAX_SEEKERS"]
margin_left = -38.0
margin_top = -24.0
margin_right = 96.0
margin_bottom = -7.0
text = "MAX ENEMY SEEKERS"

[node name="MAX_DEFENDERS" type="SpinBox" parent="."]
margin_left = 440.0
margin_top = 390.0
margin_right = 514.0
margin_bottom = 414.0
min_value = 2.0
max_value = 35.0
value = 5.0

[node name="defenders" type="RichTextLabel" parent="MAX_DEFENDERS"]
margin_left = -25.0
margin_top = -24.0
margin_right = 85.0
margin_bottom = -7.0
text = "MAX DEFENDERS"

[node name="MAX_SEEKERS" type="SpinBox" parent="."]
margin_left = 574.0
margin_top = 390.0
margin_right = 648.0
margin_bottom = 414.0
min_value = 2.0
max_value = 35.0
value = 5.0

[node name="seekers" type="RichTextLabel" parent="MAX_SEEKERS"]
margin_left = -16.0
margin_top = -24.0
margin_right = 70.0
margin_bottom = -7.0
text = "MAX SEEKERS"

[node name="COLUMN_SECTORS" type="SpinBox" parent="."]
margin_left = 196.0
margin_top = 75.0
margin_right = 270.0
margin_bottom = 99.0
min_value = 5.0
max_value = 20.0
value = 5.0

[node name="columns" type="RichTextLabel" parent="COLUMN_SECTORS"]
margin_left = -1.0
margin_top = -21.0
margin_right = 78.0
margin_bottom = -4.0
text = "COLUMNS"

[node name="SECTORS_COUNT" type="SpinBox" parent="."]
margin_left = 402.0
margin_top = 75.0
margin_right = 476.0
margin_bottom = 99.0
min_value = 5.0
max_value = 20.0
value = 5.0

[node name="sectors" type="RichTextLabel" parent="SECTORS_COUNT"]
margin_left = 2.0
margin_top = -24.0
margin_right = 65.0
margin_bottom = -7.0
text = "SECTORS"

[node name="SOLDIERS" type="SpinBox" parent="."]
margin_left = 593.0
margin_top = 75.0
margin_right = 667.0
margin_bottom = 99.0
min_value = 5.0
max_value = 60.0
value = 5.0

[node name="soldiers" type="RichTextLabel" parent="SOLDIERS"]
margin_left = -2.0
margin_top = -24.0
margin_right = 77.0
margin_bottom = -7.0
text = "SOLDIERS"

[node name="VISION_RANGE" type="SpinBox" parent="."]
margin_left = 408.0
margin_top = 270.0
margin_right = 482.0
margin_bottom = 294.0
min_value = 300.0
max_value = 1000.0
step = 20.0
value = 300.0

[node name="range" type="RichTextLabel" parent="VISION_RANGE"]
margin_left = -2.0
margin_top = -24.0
margin_right = 107.0
margin_bottom = -7.0
text = "VISION_RANGE"

[node name="LIFE_POINTS" type="SpinBox" parent="."]
margin_left = 137.0
margin_top = 270.0
margin_right = 211.0
margin_bottom = 294.0
min_value = 300.0
max_value = 10000.0
step = 20.0
value = 300.0

[node name="points" type="RichTextLabel" parent="LIFE_POINTS"]
margin_left = -2.0
margin_top = -24.0
margin_right = 107.0
margin_bottom = -7.0
text = "LIFE POINTS"

[node name="SOLDIER_LATENCY" type="SpinBox" parent="."]
margin_left = 15.0
margin_top = 200.0
margin_right = 89.0
margin_bottom = 224.0
min_value = 10.0
max_value = 60.0
step = 10.0
value = 20.0

[node name="latency" type="RichTextLabel" parent="SOLDIER_LATENCY"]
margin_left = -2.0
margin_top = -24.0
margin_right = 107.0
margin_bottom = -7.0
text = "S. LATENCY"

[node name="COMMANDER_LATENCY" type="SpinBox" parent="."]
margin_left = 137.0
margin_top = 200.0
margin_right = 211.0
margin_bottom = 224.0
min_value = 10.0
max_value = 2000.0
step = 20.0
value = 1800.0

[node name="latency" type="RichTextLabel" parent="COMMANDER_LATENCY"]
margin_left = -2.0
margin_top = -24.0
margin_right = 107.0
margin_bottom = -7.0
text = "P. LATENCY"

[node name="SAVE_DISTANCE" type="SpinBox" parent="."]
margin_left = 318.0
margin_top = 200.0
margin_right = 392.0
margin_bottom = 224.0
min_value = 10.0
max_value = 45.0
value = 10.0

[node name="distance" type="RichTextLabel" parent="SAVE_DISTANCE"]
margin_left = -40.0
margin_top = -24.0
margin_right = 102.0
margin_bottom = -7.0
text = "SAVE DISTANCE FLAG"

[node name="SAVE_DISTANCE_SOLDIERS" type="SpinBox" parent="."]
margin_left = 523.0
margin_top = 200.0
margin_right = 597.0
margin_bottom = 224.0
min_value = 90.0
max_value = 250.0
step = 20.0
value = 200.0

[node name="distance" type="RichTextLabel" parent="SAVE_DISTANCE_SOLDIERS"]
margin_left = -54.0
margin_top = -23.0
margin_right = 115.0
margin_bottom = -6.0
text = "SAVE DISTANCE SOLDIER"

[node name="CONFIGURATION LABEL" type="RichTextLabel" parent="."]
margin_left = 172.0
margin_top = 4.0
margin_right = 536.0
margin_bottom = 35.0
custom_colors/default_color = Color( 0.145098, 0.521569, 0.972549, 1 )
custom_fonts/normal_font = ExtResource( 2 )
text = "WORLD CONFIGURATION"

[node name="SHIPS CONFIGURATION" type="RichTextLabel" parent="."]
margin_left = 187.0
margin_top = 135.0
margin_right = 526.0
margin_bottom = 167.0
custom_colors/default_color = Color( 0.145098, 0.521569, 0.972549, 1 )
custom_fonts/normal_font = ExtResource( 2 )
text = "SHIPS CONFIGURATION"

[node name="TEAMS CONFIGURATION" type="RichTextLabel" parent="."]
margin_left = 193.0
margin_top = 310.0
margin_right = 547.0
margin_bottom = 342.0
custom_colors/default_color = Color( 0.145098, 0.521569, 0.972549, 1 )
custom_fonts/normal_font = ExtResource( 2 )
text = "TEAMS CONFIGURATION"

[node name="START" type="Button" parent="."]
margin_left = 397.0
margin_top = 447.0
margin_right = 484.0
margin_bottom = 467.0
text = "START"

[node name="Load_Map" type="Button" parent="."]
margin_left = 255.0
margin_top = 448.0
margin_right = 342.0
margin_bottom = 468.0
text = "Load Map"

[node name="MapsLoader" type="FileDialog" parent="."]
margin_right = 489.0
margin_bottom = 271.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Abrir un Archivo"
mode = 0
access = 2
filters = PoolStringArray( "*.json" )

[node name="SaveResults" type="Button" parent="."]
anchor_top = -0.039
anchor_bottom = -0.039
margin_left = 532.0
margin_top = 471.464
margin_right = 652.0
margin_bottom = 495.464
text = "Save Simulations"

[node name="OnLoop" type="CheckButton" parent="."]
margin_left = 15.0
margin_top = 446.0
margin_right = 91.0
margin_bottom = 486.0

[node name="on_loop_value" type="SpinBox" parent="OnLoop"]
margin_left = 82.0
margin_top = 8.0
margin_right = 156.0
margin_bottom = 32.0
min_value = 1.0
value = 1.0
editable = false

[node name="on_loop_label" type="Label" parent="OnLoop"]
margin_left = 16.0
margin_top = -19.0
margin_right = 56.0
margin_bottom = -5.0
text = "Loop"

[connection signal="pressed" from="START" to="." method="_on_START_pressed"]
[connection signal="pressed" from="Load_Map" to="." method="_on_Load_Map_pressed"]
[connection signal="file_selected" from="MapsLoader" to="." method="_on_MapsLoader_file_selected"]
[connection signal="pressed" from="SaveResults" to="." method="_on_SaveResults_pressed"]
[connection signal="pressed" from="OnLoop" to="." method="_on_OnLoop_pressed"]
[connection signal="changed" from="OnLoop/on_loop_value" to="." method="_on_on_loop_value_changed"]
